fixed filter z-index

--- a/src/components/dc-election-question/dc-election-question.css
+++ b/src/components/dc-election-question/dc-election-question.css
@@ -4,7 +4,7 @@
 }
 
 dc-election-query {
-  z-index: 1000;
+  z-index: 50;
 }
 
 .response:empty::before {
